# INSPECTA-models

./: .gitignore  .gitmodules  LICENSE  README.md
aug2025_demo/verify_build/microkit/crates/data/: Cargo.toml
isolette/hamr/microkit/crates/GUMBO_Library/: Cargo.toml
isolette/hamr/microkit/crates/GUMBO_Library/src/: lib.rs
isolette/hamr/microkit/crates/data/: Cargo.toml
isolette/hamr/microkit/crates/data/src/: lib.rs
isolette/hamr/microkit/crates/data/src/Isolette_Data_Model/: Failure_Flag_i.rs  Monitor_Mode.rs  On_Off.rs  PhysicalTemp_i.rs  Regulator_Mode.rs  Status.rs  TempWstatus_i.rs  Temp_i.rs  ValueStatus.rs
isolette/hamr/microkit/crates/data/src/Isolette_Environment/: Heat.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/: Cargo.toml  Makefile
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/proptest-regressions/test/: proptest_GUMBOX_unit_tests.txt
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/: api.rs  lib.rs  tests.rs  thermostat_rt_mhs_mhs_user.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/bridge/: extern_c_api.rs  mod.rs  test_api.rs  thermostat_rt_mhs_mhs_GUMBOX.rs  thermostat_rt_mhs_mhs_api.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/component/: thermostat_rt_mhs_mhs_app.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/data/Isolette_Data_Model/: PhysicalTemp_i.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/test/: GUMBOX_manual_unit_tests.rs  GUMBOX_proptest_unit_tests.rs  manual_GUMBOX_unit_container_tests.rs  manual_GUMBOX_unit_tests.rs  manual_unit_test.rs  manual_unit_tests.rs  mod.rs  proptest_GUMBOX_unit_tests.rs  tests.rs
isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/test/util/: cb_api.rs  cb_apis.rs  mod.rs  test_api.rs  test_apis.rs
isolette/rust-prototyping/mri/: Cargo.toml  readme.md
isolette/rust-prototyping/mri/src/: data.rs  extern_c_api.rs  extern_slang_api.rs  main.rs
isolette/rust-prototyping/mri/src/component/: manage_regulator_interface_GUMBOX.rs  manage_regulator_interface_api.rs  manage_regulator_interface_app.rs  mod.rs
isolette/rust-prototyping/v-isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/: Cargo.toml  Makefile
isolette/rust-prototyping/v-isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/: api.rs  lib.rs  logging.rs  tests.rs  thermostat_rt_mhs_mhs_user.rs
isolette/rust-prototyping/v-isolette/hamr/microkit/crates/thermostat_rt_mri_mri_VERUS/: Cargo.toml  Makefile  verus_questions.md
isolette/rust-prototyping/v-isolette/hamr/microkit/crates/thermostat_rt_mri_mri_VERUS/src/: art.rs  extern_c_api.rs  lib.rs  logging.rs
micro-examples/microkit/vest/hamr/microkit/crates/vest_ex/: Cargo.toml
micro-examples/microkit/vest/hamr/microkit/crates/vest_ex/src/: vest_ex.rs  vest_ex.vest  vest_ex_annotated.rs
open-platform-models/firewall-simple-byte-array/hamr/microkit/crates/LowLevelEthernetDriver_LowLevelEthernetDriver/: Cargo.toml
open-platform-models/firewall-simple-byte-array/hamr/microkit/crates/LowLevelEthernetDriver_LowLevelEthernetDriver/src/: lib.rs  tests.rs
open-platform-models/firewall-simple-byte-array/hamr/microkit/crates/LowLevelEthernetDriver_LowLevelEthernetDriver/src/bridge/: LowLevelEthernetDriver_LowLevelEthernetDriver_api.rs  extern_c_api.rs  mod.rs  test_api.rs
open-platform-models/firewall-simple-byte-array/hamr/microkit/crates/LowLevelEthernetDriver_LowLevelEthernetDriver/src/component/: LowLevelEthernetDriver_LowLevelEthernetDriver_app.rs  mod.rs
open-platform-models/firewall-simple-byte-array/hamr/microkit/crates/LowLevelEthernetDriver_LowLevelEthernetDriver/src/test/: tests.rs
open-platform-models/isolate-ethernet-simple/hamr/microkit/crates/seL4_Firewall_Firewall/: Cargo.toml
open-platform-models/isolate-ethernet-simple/hamr/microkit/crates/seL4_Firewall_Firewall/src/: api.rs  lib.rs  seL4_Firewall_Firewall_user.rs  tests.rs
open-platform-models/isolate-ethernet-simple/hamr/microkit/crates/seL4_Firewall_Firewall/src/bridge/: extern_c_api.rs  mod.rs  seL4_Firewall_Firewall_GUMBOX.rs  seL4_Firewall_Firewall_api.rs  test_api.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/firewall/tx/: Cargo.toml  Makefile
open-platform-models/isolate-ethernet-simple/microkit/crates/firewall/tx/src/: config.rs  lib.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser/: Cargo.toml
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser/mavlink_firewall/: Cargo.toml
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser/mavlink_firewall/src/: main.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser/mavlink_parser_vest/src/: lib.rs  mavlink.rs  mavlink.vest
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser_vest/: Cargo.toml
open-platform-models/isolate-ethernet-simple/microkit/crates/mavlink_parser_vest/src/: mavlink.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/: Cargo.toml  Makefile  rust-toolchain.toml
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/core/: Cargo.toml
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/core/src/: dma.rs  lib.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/src/: config.rs  lib.rs  logging.rs  tests.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/src/bridge/: extern_c_api.rs  mod.rs  seL4_LowLevelEthernetDriver_LowLevelEthernetDriver_api.rs  test_api.rs
open-platform-models/isolate-ethernet-simple/microkit/crates/seL4_LowLevelEthernetDriver_LowLevelEthernetDriver/src/component/: seL4_LowLevelEthernetDriver_LowLevelEthernetDriver_app.rs
open-platform-models/open-platform/microkit/crates/data/: Cargo.toml
open-platform-models/open-platform/microkit/crates/mavlink_parser_vest/: Cargo.toml
(+3794 files in other folders)
