[package]
name = "mri"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
vstd = { git = "https://github.com/verus-lang/verus.git" }
lazy_static = "1.4"
cty = "0.2.2"
once_cell = "1.19"

[dev-dependencies]
serial_test = "2"

[target.'cfg(not(unix))'.dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"] }
sel4-logging = { git = "https://github.com/seL4/rust-sel4" }