# This file will not be overwritten if codegen is rerun

[package]
name = "GUMBO_Library"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path="../data" }
vstd = { git = "https://github.com/verus-lang/verus.git", default-features=false, tag="release/0.2025.11.23.41c5885" }
verus_builtin = { git = "https://github.com/verus-lang/verus.git", tag="release/0.2025.11.23.41c5885" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus.git", tag="release/0.2025.11.23.41c5885" }

[package.metadata.verus]
verify = true

