[workspace]
resolver = "3"
members = ["mavlink_parser_vest", "mavlink_firewall"]
default-members = ["mavlink_firewall"]

[workspace.dependencies]
# verus_builtin = "0.0.0-2025-08-12-1837"
# verus_builtin_macros = "0.0.0-2025-08-12-1837"
# vstd = "=0.0.0-2025-08-12-1837"
vest = { git = "https://github.com/secure-foundations/vest.git" }

# [[bin]]
# name = "mavlink_firewall"
# path = "mavlink_firewall/src/main.rs"

# [package.metadata.verus]
# verify = true
