[package]
name = "sel4_low_level_ethernet_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
eth-driver-core = { path = "core" }
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"] }
sel4-logging = { git = "https://github.com/seL4/rust-sel4" }
sel4-microkit-base = { git = "https://github.com/seL4/rust-sel4" }
sel4-driver-interfaces = { git = "https://github.com/seL4/rust-sel4" }

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = ["proto-ipv4", "medium-ethernet", "socket-raw"]

[lib]
name = "seL4_LowLevelEthernetDriver_LowLevelEthernetDriver"
# crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib
