[package]
name = "mavlink_parser_vest"
version = "0.1.0"
edition = "2024"

[dependencies]
vstd = { version = "=0.0.0-2026-01-11-0057", default-features=false }
verus_builtin = { version = "=0.0.0-2026-01-11-0057" }
verus_builtin_macros = { version = "=0.0.0-2025-12-07-0054" }
vest_lib = { path = "../vest", default-features=false }

[package.metadata.verus]
verify = true
