[package]
name = "tx_firewall"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
firewall-core = { path = "../core" }
inspecta-types = { path = "../../inspecta_types" }

# seL4 rust libraries require the microkit sdk which are built for the target platform.
# Therefore, builds for testing on the host will fail. This works assuming test builds are done on unix. 
[target.'cfg(not(unix))'.dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"] }
sel4-logging = { git = "https://github.com/seL4/rust-sel4" }

[lib]
name = "tx_firewall"
crate-type = ["staticlib"] # Creates static lib
