# This file will not be overwritten if codegen is rerun

[package]
name = "thermostat_rt_mri_mri"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
cty = "0.2.2"
sel4 = { git = "https://github.com/seL4/rust-sel4", features = ["single-threaded"], optional = true }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", optional = true}
vstd = { git = "https://github.com/verus-lang/verus.git" }

[dev-dependencies]
serial_test = "2"
lazy_static = "1.4"
once_cell = "1.19"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
has_sel4 = ["dep:sel4", "dep:sel4-logging"]