[package]
name = "vest_ex"
version = "0.1.0"
edition = "2024"

[dependencies]
vstd = { version = "=0.0.0-2026-01-25-0057", default-features=false }
verus_builtin = { version = "=0.0.0-2026-01-25-0057" }
verus_builtin_macros = { version = "=0.0.0-2026-01-25-0057" }

vest_lib = { git = "https://github.com/jasonbelt/vest", rev = "vest-test2", default-features=false }

[package.metadata.verus]
verify = true
